[tool.poetry]
name = "zerolayer"
version = "0.1.0"
description = ""
authors = ["Alex Diaz <alex@akdev.xyz>"]
readme = "README.md"
packages = [{include = "zerolayer", from = "src"}]


[tool.poetry.scripts]
zerolayer = "zerolayer.cli:main"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.2"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
